deployment/deploy-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mean-express-deploy
  labels:
    app: mean-express-deploy
 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mean-express-pod
  template:
    metadata:
      labels:
        app: mean-express-pod
    spec:
      containers:
      - image: khaledklai/mean-express:0.4
        name: mean-express-container
        ports:
        - containerPort: 3000
