deployment/mean-angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mean-angular
  name: mean-angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mean-angular
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mean-angular
    spec:
      containers:
      - image: khaledklai/mean-angular:0.2
        name: mean-angular
        resources: {}
status: {}
