deployment/mean-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mean-express
  name: mean-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mean-express
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mean-express
    spec:
      containers:
      - image: khaledklai/mean-express:0.2
        name: mean-express
        ports:
        - containerPort: 3000
        resources: {}
status: {}
