deployment/mean-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mean-mongo
  name: mean-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mean-mongo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mean-mongo
    spec:
      containers:
      - image: mongo
        name: mongo
        resources: {}
status: {}
