deployment/mean-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-04-30T22:19:56Z"
  labels:
    app: mean-express
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":3000,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-expose
    operation: Update
    time: "2021-04-30T22:19:56Z"
  name: mean-express
  namespace: default
  resourceVersion: "244883"
  selfLink: /api/v1/namespaces/default/services/mean-express
  uid: 797d2594-f1e9-4785-a569-2c990264e715
spec:
  clusterIP: 10.152.183.126
  clusterIPs:
  - 10.152.183.126
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: mean-express
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
