deployment/mean-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-04-30T22:28:07Z"
  labels:
    app: mean-mongo
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":27017,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-expose
    operation: Update
    time: "2021-04-30T22:28:07Z"
  name: mean-mongo
  namespace: default
  resourceVersion: "245498"
  selfLink: /api/v1/namespaces/default/services/mean-mongo
  uid: da67b3b9-020d-4e81-9aa1-8fe636317e01
spec:
  clusterIP: 10.152.183.59
  clusterIPs:
  - 10.152.183.59
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mean-mongo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
